--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,6 +2,7 @@
 #subjects{
   font-size: 10px;
   margin:10px;
+  
 }
 .semesterblock{
   display: inline-block;
@@ -41,7 +42,33 @@
   border-radius: 4px;
   margin: 2px;
 }
-
+#title{
+  text-align: center;
+  color: rgb(34,106,84);
+}
+.curriculums{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+.curriculum{
+  background-color:rgb(34,106,84);
+  border:3px solid rgb(27,89,67);
+  color:white;
+  border-radius:8px;
+  padding:5px 12px;
+  margin: 10px;
+  display: inline-block;
+  font-size: 20px;
+  text-align: center;
+}
+.curriculum:hover{
+  background-color:rgb(10,45,25);
+  border-color: rgb(1,16,3);
+}
+a{
+  text-decoration: none;
+}
 /* NAVBAR */
 .navbar{
   box-shadow: 0px 3px 4px #222222;
@@ -76,5 +103,5 @@
   padding:5px 12px;
 }
 .submitbutton:hover{
-
+  background-color:rgb(27,89,67);
 }
