--- a/src/main/resources/static/landing.css
+++ b/src/main/resources/static/landing.css
@@ -86,7 +86,7 @@ h1 {
 
 .split.right {
   right:0;
-  background: url('https://image.ibb.co/m3ZbRb/programmer.png') center center no-repeat;
+  background: url('img/rightbg.png') center center no-repeat;
   background-size: cover;
 }
 
